
2018-02-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: renamed cob_strcasecmp to cb_strcasecmp
	* reserved.c (default_reserved_words_list): removed EBCDIC handling
	  as the list is always sorted now
	* reserved.c (initialize_reserved_words_if_needed): use case
	  sensitive comparison when sorting default_reserved_words_list
	* field.c: adjustments for REPORT/SCREEN USAGE checks
	* cobc.c, typeck.c, field.c, tree.h: moved (cobc_enum_explain_storage)
	  to typeck.c as enum_explain_storage
	* typeck.c: minor refactoring of arithmetic_osvs code

2018-02-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_get_long_long, cb_get_u_long_long): fix bug #492
	  adjusted literal size check
	* tree.c, typeck.c, codegen.c: first approach to fix tree cast
	  errors in REPORTWRITER code
	* codegen.c: moved parts of (output_funcall) to new functions
	  (output_funcall_typed) and (output_funcall_typed_report)

2018-02-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, tree.h [COB_TREE_DEBUG]: make sure that we don't enter
	  a loop of cb_tree cast errors, possible as (cb_name) is called
	  which may result in another call of (cobc_tree_cast_error);
	  removed compiler specific handling
	* cobc.c (cobc_abort_terminate): add parameter indicating that
	  the user should report the error

2018-01-30  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix generation of dump-code for fields with IS EXTERNAL
	* parser.y: Have REPORT fields parse all USAGEs to provide
	  meaningful errors and to allow USAGE NATIONAL
	* field.c: Add check for REPORT/SCREEN field not DISPLAY
	  'fieldname' should be USAGE DISPLAY for REPORT/SCREEN

2018-01-29  Ron Norman <rjn@inglenet.com>

	* tree.c, tree.h, typeck.c: Fine tuning of arithmetic_osvs

2018-01-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: postponed check for dangling LINKAGE items